--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,9 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+
+#Project spesific:
+
+# */.ipynb_checkpoints/*
+Week 1 Python/**/.ipynb_checkpoints/*
